k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfoli
  namespace: default
  labels:
    app: portfoli
spec:
  replicas: 2
  selector:
    matchLabels:
      app: portfoli
  template:
    metadata:
      labels:
        app: portfoli
    spec:
      containers:
        - name: nginx
          image: ghcr.io/aygosan/portfoli:latest
          ports:
            - containerPort: 80
              name: http
          resources:
            requests:
              cpu: 50m
              memory: 32Mi
            limits:
              cpu: 200m
              memory: 128Mi
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 20
      imagePullSecrets:
        - name: ghcr-pull-secret
